2005-08-01  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/nio/channels/FileChannel/lock.java
	(test): Moved file delete to end.

2005-07-31  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/nio/channels/FileChannel/lock.java: New test.
	* runner: Add -Dmauve.vmexec=$RUNTIME.
	* batch_run (COMPILER): Add -nowarn.

2005-07-29  Jeroen Frijters  <jeroen@frijters.net>

	* gnu/testlet/java/lang/ClassLoader/findLoadedClass.java:
	New test.

2005-07-28  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorForeground.java
	(test): reset default theme after test,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getAcceleratorSelectedForeground.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getBlack.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControl.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDarkShadow.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlDisabled.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlHighlight.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlInfo.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlShadow.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlTextColor.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getControlTextFont.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getDesktopColor.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getFocusColor.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getHighlightedTextColor.java
	(test): likewise,
	* gnu/testlet/javax/swing/plaf/metal/MetalLookAndFeel/getInactiveControlTextColor.java